--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 	<p>
 		Hi, I'm an index!
 	</p>
+	
+	<p>
+		<a href="./index.html">Home</a>
+		<a href="./resume.html">Resume</a>
+	</p>
 
 	<p>
 		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" height="31" width="88" /></a>
