--- a/index.html
+++ b/index.html
@@ -7,16 +7,34 @@
 
 <body>
 <div>
-
-	<p>
-		Hi, I'm an index!
-	</p>
 	
 	<p>
 		<a href="./index.html">Home</a>
 		<a href="./resume.html">Resume</a>
 	</p>
 
+	<p>
+	I am a senior studying Business Analytics & Information Systems and German in Iowa City, Iowa.
+	My coursework has included SQL in SQL Developer; Visual Basic in Visio as well as .NET exposure;
+	data communications from hardware up to the application layer, including routing and IP addressing;
+	and data mining with XLMiner to develop business intelligence and analyses, explain collected data,
+	and predict future cases.
+	I have had the opportunity to apply and learn hands-on as a Database Administrator for
+	Principal Financial Group, and currently as a Desktop Support Specialist for University of Iowa
+	Athletics IT.
+	This summer I also began serving the Iowa Business Technology Association as President.
+</p>
+<p>
+ I am excited by culture, languages, and broadening my perspectives by learning about the world.
+ I have taken international business courses in entrepreneurship, management, and politics, and
+ German courses in composition and conversation, as well as picking up languages in a handful of
+ countries as I travel along.
+ I had the opportunity to travel through Italy, France, Spain, Germany, and Switzerland,
+ and take business courses in finance and law near Venice, Italy.
+</p>
+<p>
+ Maximizer - Futuristic - Harmony - Woo - Analytical
+ </p>
 	<p>
 		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" height="31" width="88" /></a>
 	</p>
