--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,9 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
-<head> <title>   </title> </head>
+<head> <title> Karly: Resume </title> </head>
+
+<link rel="stylesheet" type="text/css" href="./stylesheet.css" /> 
 
 <body>
 <div>
