add blog and background image

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<p>
 		<a href="./index.html">Home</a>
 		<a href="./resume.html">Resume</a>
+		<a href="http://ohnefalle.tumblr.com/">Blog</a>
 	</p>
 
 	<p>
@@ -37,6 +38,7 @@
 <p>
  Maximizer - Futuristic - Harmony - Woo - Analytical
  </p>
+
 	<p>
 		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" height="31" width="88" /></a>
 	</p>
