--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,7 @@
 	<p>
 		<a href="./index.html">Home</a>
 		<a href="./resume.html">Resume</a>
+		<a href="http://ohnefalle.tumblr.com/">Blog</a>
 	</p>
 	
 	<p>
