--- a/index.html
+++ b/index.html
@@ -9,12 +9,26 @@
 
 <body>
 <div>
-	
+	<h1>Karly with a K</h1>
 	<p>
 		<a href="./index.html">Home</a>
 		<a href="./resume.html">Resume</a>
 		<a href="http://ohnefalle.tumblr.com/">Blog</a>
 	</p>
+	
+<div id="lsidebar">
+
+<div class="polaroid"> <img src="./fam.jpg" alt="My Family" title="My Family" width="250px" /> <br /><span>My Family</span></div>
+
+<div class="polaroid"> <img src="./rooms.jpg" alt="My Roommates" title="My Roommates" width="250px" /> <br /><span>My Roommates</span></div>
+
+<div class="polaroid"> <img src="./bffs.jpg" alt="My Best Friends" title="My Best Friends" width="250px" /> <br /><span>My Best Friends</span></div>
+
+<div class="polaroid"> <img src="./bta.jpg" alt="Business Technology Association" title="Business Technology Association" width="250px" /> <br /><span>Business Technology Association</span></div>
+
+</div>
+
+<div>
 
 	<p>
 	I am a senior studying Business Analytics & Information Systems and German in Iowa City, Iowa.
@@ -38,6 +52,7 @@
 <p>
  Maximizer - Futuristic - Harmony - Woo - Analytical
  </p>
+</div>
 
 	<p>
 		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" height="31" width="88" /></a>
