passed first validation

--- a/index.html
+++ b/index.html
@@ -3,35 +3,32 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
-<head> <title> Karly: Home </title> </head>
+<head> <title> Karly: Home </title> 
 
-<link rel="stylesheet" type="text/css" href="./stylesheet.css" /> 
+<link rel="stylesheet" type="text/css" href="./stylesheet.css" /> </head>
 
 <body>
 <div>
-	<h1>Karly with a K</h1>
-	<p>
-		<a href="./index.html">Home</a>
-		<a href="./resume.html">Resume</a>
-		<a href="http://ohnefalle.tumblr.com/">Blog</a>
+<div>
+	<h1 class="title">ABOUT KARLY</h1>
+	<p class="buttons">
+		<a href="./index.html"><button style="button">Home</button></a>
+		<a href="./resume.html"><button style="button">Resume</button></a>
+		<a href="http://www.linkedin.com/in/karlyholland/"><button style="button">LinkedIn</button></a>
 	</p>
-	
+</div>	
 <div id="lsidebar">
-
-<div class="polaroid"> <img src="./fam.jpg" alt="My Family" title="My Family" width="250px" /> <br /><span>My Family</span></div>
-
-<div class="polaroid"> <img src="./rooms.jpg" alt="My Roommates" title="My Roommates" width="250px" /> <br /><span>My Roommates</span></div>
-
-<div class="polaroid"> <img src="./bffs.jpg" alt="My Best Friends" title="My Best Friends" width="250px" /> <br /><span>My Best Friends</span></div>
-
-<div class="polaroid"> <img src="./bta.jpg" alt="Business Technology Association" title="Business Technology Association" width="250px" /> <br /><span>Business Technology Association</span></div>
-
+<div class="polaroid"> <img src="./honor.jpg" alt="Honorable Mention" title="Honorable Mention" width="250px" /> <br /><span>AITP NCC Honorable Mention<br />Business Analytics </span></div>
+<div class="polaroid"> <img src="./qa.jpg" alt="Quality Assurance Team" title="Quality Assurance Team" width="250px" /> <br /><span>Quality Assurance Team</span></div>
+<div class="polaroid"> <img src="./jam.jpg" alt="PFG Code Jam" title="PFG Code Jam" width="250px" /> <br /><span>PFG Code Jam</span></div>
 </div>
-
+<br />
 <div>
 
+
+<h2> SUMMARY </h2>
 	<p>
-	I am a senior studying Business Analytics & Information Systems and German in Iowa City, Iowa.
+	I am a senior studying Business Analytics &amp; Information Systems and German in Iowa City, Iowa.
 	My coursework has included SQL in SQL Developer; Visual Basic in Visio as well as .NET exposure;
 	data communications from hardware up to the application layer, including routing and IP addressing;
 	and data mining with XLMiner to develop business intelligence and analyses, explain collected data,
@@ -49,11 +46,13 @@
  I had the opportunity to travel through Italy, France, Spain, Germany, and Switzerland,
  and take business courses in finance and law near Venice, Italy.
 </p>
+<br />
+<h2> STRENGTHS </h2>
 <p>
  Maximizer - Futuristic - Harmony - Woo - Analytical
  </p>
 </div>
-
+<br />
 	<p>
 		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" height="31" width="88" /></a>
 	</p>
