--- a/resume.html
+++ b/resume.html
@@ -3,78 +3,75 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
-<head> <title> Karly: Resume </title> </head>
-
-<link rel="stylesheet" type="text/css" href="./stylesheet.css" /> 
+<head> <title> Karly: Resume </title> 
+<link rel="stylesheet" type="text/css" href="./stylesheet.css" /> </head>
 
 <body>
 <div>
+<h1 class="title">KARLY HOLLAND</h1>
 
-	<p>
-		<a href="./index.html">Home</a>
-		<a href="./resume.html">Resume</a>
-		<a href="http://ohnefalle.tumblr.com/">Blog</a>
+	<p class="buttons">
+		<a href="./index.html"><button style="button">Home</button></a>
+		<a href="./resume.html"><button style="button">Resume</button></a>
+		<a href="http://www.linkedin.com/in/karlyholland/"><button style="button">LinkedIn</button></a>
 	</p>
 	
 	<p>
-	
 	<a href="http://www.linkedin.com/in/karlyholland"><img src="./liqr.png" alt="LinkedIn" height="50"/></a>
-	<br /><h1>KARLY HOLLAND</h1>
-
-<h2>EDUCATION</h2>
+	</p>
+<h2 class="subtitle">EDUCATION</h2>
 The University of Iowa, Tippie College of Business, Iowa City, IA (Anticipated May 2014)
-<br />BBA Business Analytics & Information Systems & German Minor (Cum. GPA: 3.8/4.0)
+<br />BBA Business Analytics &amp; Information Systems &amp; German Minor (Cum. GPA: 3.8/4.0)
 <br />Beta Gamma Sigma International Honor Society (Sep. 2012-Present)
-<br />Tippie Scholars Program, Honors Program, & Dean's List (Aug. 2010-Present)
+<br />Tippie Scholars Program, Honors Program, &amp; Dean's List (Aug. 2010-Present)
 
-The Consortium Institute of Management & Business Administration, Paderno del Grappa, Italy
+The Consortium Institute of Management &amp; Business Administration, Paderno del Grappa, Italy
 <br />Study Abroad Undergraduate Student (May 2012-Jun. 2012)
 
-<h2>WORK EXPERIENCE</h2>
+<h2 class="subtitle">WORK EXPERIENCE</h2>
 Desktop Support Specialist (Sep. 2013-Present)
 <br />University of Iowa Athletics Information Technology, Iowa City, IA
-<ul><li>Supported hardware and software services for all Hawkeye Athletics programs, coaches, & administrators</li>
-<li>Serviced & rebuilt software systems for predominantly Apple and Microsoft products</li>
-<li>Facilitated scoring & statistics technology for home athletic events</li></ul>
+<ul><li>Supported hardware and software services for all Hawkeye Athletics programs, coaches, &amp; administrators</li>
+<li>Serviced &amp; rebuilt software systems for predominantly Apple and Microsoft products</li>
+<li>Facilitated scoring &amp; statistics technology for home athletic events</li></ul>
 
 Help Desk Consultant (Aug. 2012-Sep. 2013)
 <br />University of Iowa Information Technology Services, Iowa City, IA
 <ul><li>Provided customer support for technological issues in the University of Iowa community</li>
 <li>Serviced 5-30 users per shift via walk-in appointment or phone call</li>
-<li>Learned actively about aspects of technology including operating systems, security, software, & web</li></ul>
+<li>Learned actively about aspects of technology including operating systems, security, software, &amp; web</li></ul>
 
 Database Administrator Intern (May 2013-Aug. 2013)
 <br />Principal Financial Group Corporate Systems Support, Des Moines, IA
 <ul><li>Won a 3-day team code jam for an employee mobile application developed in Eclipse with HTML</li>
-<li>Researched operational & retention requirements for 300 databases to build & schedule mainframe utilities</li>
-<li>Modeled & built a new database to archive customer information for data retention & legal hold compliance</li>
+<li>Researched operational &amp; retention requirements for 300 databases to build &amp; schedule mainframe utilities</li>
+<li>Modeled &amp; built a new database to archive customer information for data retention &amp; legal hold compliance</li>
 <li>Tested migrations to Maven for quality assurance on an independent intern project to reduce technical debt</li></ul>
 
-Resident Assistant, Business & Entrepreneurship Living-Learning Community (Aug. 2011-May 2012)
-<br />University of Iowa Housing & Dining, Iowa City, IA
-<ul><li>Attended intensive diversity, resource, & incident response training</li>
-<li>Mediated conflicts using communication & problem solving skills</li>
+Resident Assistant, Business &amp; Entrepreneurship Living-Learning Community (Aug. 2011-May 2012)
+<br />University of Iowa Housing &amp; Dining, Iowa City, IA
+<ul><li>Attended intensive diversity, resource, &amp; incident response training</li>
+<li>Mediated conflicts using communication &amp; problem solving skills</li>
 <li>Planned three educational, social, or service events each month</li>
 <li>Supervised 56 co-ed residents daily</li></ul>
 
 Financial Representative Intern (May 2011-Oct. 2011)
 <br />Northwestern Mutual Financial Network, Waterloo, IA
-<ul><li>Earned Iowa Insurance Division Licenses to sell & service life, disability, & long-term care insurance</li>
-<li>Developed personal retirement analysis reports & financial security plans for clients & families</li>
-<li>Met with 15 clients per week to discuss personal, professional & financial goals, & financial security</li></ul>
+<ul><li>Earned Iowa Insurance Division Licenses to sell &amp; service life, disability, &amp; long-term care insurance</li>
+<li>Developed personal retirement analysis reports &amp; financial security plans for clients &amp; families</li>
+<li>Met with 15 clients per week to discuss personal, professional &amp; financial goals, &amp; financial security</li></ul>
 
-<h2>LEADERSHIP & INVOLVEMENT</h2>
+<h2 class="subtitle">LEADERSHIP &amp; INVOLVEMENT</h2>
 Business Technology Association, President (Feb. 2012-Present)
-<ul><li>Facilitated two weekly meetings to coordinate four vice presidents & 50 BTA members</li>
-<li>Hosted BAIS/CS Private Career Fair with 11 companies & 60 students in attendance</li>
+<ul><li>Facilitated two weekly meetings to coordinate four vice presidents &amp; 50 BTA members</li>
+<li>Hosted BAIS/CS Private Career Fair with 11 companies &amp; 60 students in attendance</li>
 <li>Organized trip for team of 15 to represent the University of Iowa at the AITP national competition in Atlanta, GA</li></ul>
 Iowa Tennis Club (Sep. 2010-Present)
 <br />AITP National Collegiate Conference, Honorable Mention (Apr. 2013)
 <br />Principal Leadership Conference (May 2011)
 <br />Hillcrest Residence Hall Association, Vice President (Sep. 2010-May 2011)
 
-	</p>
-
+<br />
 	<p>
 		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" height="31" width="88" /></a>
 	</p>
