trying to get print form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 <link rel="stylesheet" type="text/css" href="./stylesheet.css" /> </head>
 
 <body>
+
 <div>
+<div id="lsidebar">
+<div class="polaroid"> <img src="./honor.jpg" alt="Honorable Mention" title="Honorable Mention" height="200px" /> <br /><span>AITP NCC Honorable Mention<br />Business Analytics </span></div>
+<div class="polaroid"> <img src="./qa.jpg" alt="Quality Assurance Team" title="Quality Assurance Team" height="200px" /> <br /><span>Quality Assurance Team</span></div>
+<div class="polaroid"> <img src="./jam.jpg" alt="PFG Code Jam" title="PFG Code Jam" height="200px" /> <br /><span>PFG Code Jam</span></div>
+</div>
+
 <div>
 	<h1 class="title">ABOUT KARLY</h1>
 	<p class="buttons">
@@ -17,16 +24,11 @@
 		<a href="http://www.linkedin.com/in/karlyholland/"><button style="button">LinkedIn</button></a>
 	</p>
 </div>	
-<div id="lsidebar">
-<div class="polaroid"> <img src="./honor.jpg" alt="Honorable Mention" title="Honorable Mention" width="250px" /> <br /><span>AITP NCC Honorable Mention<br />Business Analytics </span></div>
-<div class="polaroid"> <img src="./qa.jpg" alt="Quality Assurance Team" title="Quality Assurance Team" width="250px" /> <br /><span>Quality Assurance Team</span></div>
-<div class="polaroid"> <img src="./jam.jpg" alt="PFG Code Jam" title="PFG Code Jam" width="250px" /> <br /><span>PFG Code Jam</span></div>
-</div>
 <br />
 <div>
 
 
-<h2> SUMMARY </h2>
+<h2 class="subtitle">SUMMARY </h2>
 	<p>
 	I am a senior studying Business Analytics &amp; Information Systems and German in Iowa City, Iowa.
 	My coursework has included SQL in SQL Developer; Visual Basic in Visio as well as .NET exposure;
@@ -47,16 +49,26 @@
  and take business courses in finance and law near Venice, Italy.
 </p>
 <br />
-<h2> STRENGTHS </h2>
+<h2 class="subtitle">STRENGTHS </h2>
 <p>
  Maximizer - Futuristic - Harmony - Woo - Analytical
  </p>
+ <br />
+ <div>
+<h2 class="subtitle">MAJOR COURSES </h2>
+	<ul><li>Applications of Database Management Systems</li>
+		<li>BAIS Capstone</li>
+		<li>Business Intelligence</li>
+		<li>Business Process Analysis</li>
+		<li>Data Communications</li>
+		<li>Software Design &amp; Development</li>
+		<li>Visual Basic Programming</li></ul>
+		</div>
 </div>
 <br />
-	<p>
+	<div class="css"><p>
 		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" height="31" width="88" /></a>
-	</p>
-
+	</p></div>
 
 </div>
 </body>
