--- a/resume.html
+++ b/resume.html
@@ -4,10 +4,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
 <head> <title> Karly: Resume </title> 
-<link rel="stylesheet" type="text/css" href="./stylesheet.css" /> </head>
 
-<body>
-<div>
+<link rel="stylesheet" type="text/css" href="./stylesheet.css" /> </head>
+<link rel="stylesheet" type="text/css" media="print" href="./print.css" />
+
+<body class="centdiv">
+<div id="wrapper">
 <h1 class="title">KARLY HOLLAND</h1>
 
 	<p class="buttons">
@@ -72,10 +74,9 @@ Iowa Tennis Club (Sep. 2010-Present)
 <br />Hillcrest Residence Hall Association, Vice President (Sep. 2010-May 2011)
 
 <br />
-	<p>
+	<div class="css"><p>
 		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" height="31" width="88" /></a>
-	</p>
-
+	</p></div>
 
 </div>
 </body>
