cant figure out print

--- a/resume.html
+++ b/resume.html
@@ -5,22 +5,23 @@
 
 <head> <title> Karly: Resume </title> 
 
-<link rel="stylesheet" type="text/css" href="./stylesheet.css" /> </head>
-<link rel="stylesheet" type="text/css" media="print" href="./print.css" />
+<link rel="stylesheet" type="text/css" href="./stylesheet.css" /> 
+<link rel="stylesheet" type="text/css" media="print" href="./print.css" /></head>
 
 <body class="centdiv">
 <div id="wrapper">
+<div id="resume">
 <h1 class="title">KARLY HOLLAND</h1>
-
+</div>
 	<p class="buttons">
 		<a href="./index.html"><button style="button">Home</button></a>
 		<a href="./resume.html"><button style="button">Resume</button></a>
 		<a href="http://www.linkedin.com/in/karlyholland/"><button style="button">LinkedIn</button></a>
 	</p>
 	
-	<p>
+	<br />
 	<a href="http://www.linkedin.com/in/karlyholland"><img src="./liqr.png" alt="LinkedIn" height="50"/></a>
-	</p>
+	
 <h2 class="subtitle">EDUCATION</h2>
 The University of Iowa, Tippie College of Business, Iowa City, IA (Anticipated May 2014)
 <br />BBA Business Analytics &amp; Information Systems &amp; German Minor (Cum. GPA: 3.8/4.0)
