fixed print error, updated index

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <div>
 <div id="lsidebar">
+<div class="polaroid"> <img src="./prof.jpg" alt="Karly Holland" title="Karly Holland" height="200px" /> <br /><span></span></div>
 <div class="polaroid"> <img src="./honor.jpg" alt="Honorable Mention" title="Honorable Mention" height="200px" /> <br /><span>AITP NCC Honorable Mention<br />Business Analytics </span></div>
-<div class="polaroid"> <img src="./qa.jpg" alt="Quality Assurance Team" title="Quality Assurance Team" height="200px" /> <br /><span>Quality Assurance Team</span></div>
+<div class="polaroid"> <img src="./qa.jpg" alt="PFG Quality Assurance Team" title="PFG Quality Assurance Team" height="200px" /> <br /><span>PFG Quality Assurance Team</span></div>
 <div class="polaroid"> <img src="./jam.jpg" alt="PFG Code Jam" title="PFG Code Jam" height="200px" /> <br /><span>PFG Code Jam</span></div>
 </div>
 
@@ -30,29 +31,83 @@
 
 <h2 class="subtitle">SUMMARY </h2>
 	<p>
-	I am a senior studying Business Analytics &amp; Information Systems and German in Iowa City, Iowa.
+	I'm a senior studying Business Analytics &amp; Information Systems &amp; German in Iowa City, Iowa.
 	My coursework has included SQL in SQL Developer; Visual Basic in Visio as well as .NET exposure;
-	data communications from hardware up to the application layer, including routing and IP addressing;
-	and data mining with XLMiner to develop business intelligence and analyses, explain collected data,
-	and predict future cases.
-	I have had the opportunity to apply and learn hands-on as a Database Administrator for
-	Principal Financial Group, and currently as a Desktop Support Specialist for University of Iowa
+	data communications from hardware up to the application layer, including routing &amp; IP addressing;
+	&amp; data mining with XLMiner to develop business intelligence &amp; analyses, explain collected data,
+	&amp; predict future cases.
+	I have had the opportunity to apply &amp; learn hands-on as a Database Administrator for
+	Principal Financial Group, &amp; currently as a Desktop Support Specialist for University of Iowa
 	Athletics IT.
 	This summer I also began serving the Iowa Business Technology Association as President.
-</p>
-<p>
- I am excited by culture, languages, and broadening my perspectives by learning about the world.
- I have taken international business courses in entrepreneurship, management, and politics, and
- German courses in composition and conversation, as well as picking up languages in a handful of
- countries as I travel along.
- I had the opportunity to travel through Italy, France, Spain, Germany, and Switzerland,
- and take business courses in finance and law near Venice, Italy.
+ I am excited by culture, languages, &amp; broadening my perspectives by learning about the world.
+ I have taken international business courses in entrepreneurship, management, &amp; politics, &amp;
+ German courses in composition &amp; conversation.
+ I had the opportunity to travel through Italy, France, Spain, Germany, &amp; Switzerland,
+ and take business courses in finance &amp; law near Venice, Italy.
 </p>
 <br />
 <h2 class="subtitle">STRENGTHS </h2>
-<p>
- Maximizer - Futuristic - Harmony - Woo - Analytical
- </p>
+ <ol><li><b>Maximizer</b><br /><i>Excellence, not average, is your measure. Taking something from below
+ average to slightly above average takes a great deal of effort and in your opinion is not very rewarding.
+ Transforming something strong into something superb takes just as much effort but is much more thrilling.
+ Strengths, whether yours or someone else's, fascinate you. Like a diver after pearls, you search them
+ out, watching for the telltale signs of a strength. A glimpse of untutored excellence, rapid learning,
+ a skill mastered without recourse to steps - all these are clues that a strength may be in play. And
+ having found a strength, you feel compelled to nurture it, refine it, and stretch it toward excellence.
+ You polish the pearl until it shines. This natural sorting of strengths means that others see you as
+ discriminating. You choose to spend time with people who appreciate your particular strengths. Likewise,
+ you are attracted to others who seem to have found and cultivated their own strengths. You tend to avoid 
+ those who want to fix you and make you well rounded. You don't want to spend your life bemoaning what you
+ lack. Rather, you want to capitalize on the gifts with which you are blessed. It's more fun. It's more 
+ productive. And, counterintuitively, it is more demanding.</i></li>
+ <li><b>Futuristic</b><br /><i>"Wouldn't it be great if..." You are the kind of person who loves to peer
+ over the horizon. The future fascinates you. As if it were projected on the wall, you see in detail
+ what the future might hold, and this detailed picture keeps pulling you forward, into tomorrow.
+ While the exact content of the picture will depend on your other strengths and interests - a better
+ product, a better team, a better life, or a better world - it will always be inspirational to you.
+ You are a dreamer who sees visions of what could be and who cherishes those visions. When the present
+ proves too frustrating and the people around you too pragmatic, you conjure up your visions of the
+ future and they energize you. They can energize others, too. In fact, very often people look to you
+ to describe your visions of the future. They want a picture that can raise their sights and thereby
+ their spirits. You can paint it for them. Practice. Choose your words carefully. Make the picture as
+ vivid as possible. People will want to latch on to the hope you bring.</i></li>
+ <li><b>Harmony</b><br /><i>You look for areas of agreement. In your view there is little to be gained
+ from conflict and friction, so you seek to hold them to a minimum. When you know that the people around
+ you hold differing views, you try to find the common ground. You try to steer them away from
+ confrontation and toward harmony. In fact, harmony is one of your guiding values. You can't quite
+ believe how much time is wasted by people trying to impose their views on others. Wouldn't we all be
+ more productive if we kept our opinions in check and instead looked for consensus and support? You
+ believe we would, and you live by that belief. When others are sounding off about their goals, their
+ claims, and their fervently held opinions, you hold your peace. When others strike out in a direction,
+ you will willingly, in the service of harmony, modify your own objectives to merge with theirs (as long
+ as their basic values do not clash with yours). When others start to argue about their pet theory or
+ concept, you steer clear of the debate, preferring to talk about practical, down-to-earth matters on
+ which you can all agree. In your view we are all in the same boat, and we need this boat to get where we
+ are going. It is a good boat. There is no need to rock it just to show that you can.</i></li>
+ <li><b>Woo</b><br /><i>Woo stands for winning others over. You enjoy the challenge of meeting new people 
+ and getting them to like you. Strangers are rarely intimidating to you. On the contrary, strangers can 
+ be energizing. You are drawn to them. You want to learn their names, ask them questions, and find some 
+ area of common interest so that you can strike up a conversation and build rapport. Some people shy away 
+ from starting up conversations because they worry about running out of things to say. You don't. Not 
+ only are you rarely at a loss for words; you actually enjoy initiating with strangers because you derive 
+ satisfaction from breaking the ice and making a connection. Once that connection is made, you are quite 
+ happy to wrap it up and move on. There are new people to meet, new rooms to work, new crowds to mingle 
+ in. In your world there are no strangers, only friends you haven’t met yet - lots of them.</i></li>
+ <li><b>Analytical</b><br /><i>Your Analytical theme challenges other people: "Prove it. Show me why what
+ you are claiming is true." In the face of this kind of questioning some will find that their
+ brilliant theories wither and die. For you, this is precisely the point. You do not necessarily
+ want to destroy other people's ideas, but you do insist that their theories be sound. You see
+ yourself as objective and dispassionate. You like data because they are value free. They have no
+ agenda. Armed with these data, you search for patterns and connections. You want to understand
+ how certain patterns affect one another. How do they combine? What is their outcome? Does this
+ outcome fit with the theory being offered or the situation being confronted? These are your questions.
+ You peel the layers back until, gradually, the root cause or causes are revealed. Others see you as
+ logical and rigorous. Over time they will come to you in order to expose someone's "wishful thinking"
+ or "clumsy thinking" to your refining mind. It is hoped that your analysis is never delivered too
+ harshly. Otherwise, others may avoid you when that "wishful thinking" is their own.
+ <a href="http://www.strengthsquest.com/content/141365/resources.aspx">(&copy;StrengthsQuest)</a>
+ </i></li></ol>
  <br />
  <div>
 <h2 class="subtitle">MAJOR COURSES </h2>
