--- a/resume.html
+++ b/resume.html
@@ -27,8 +27,8 @@ The University of Iowa, Tippie College of Business, Iowa City, IA (Anticipated M
 <br />BBA Business Analytics &amp; Information Systems &amp; German Minor (Cum. GPA: 3.8/4.0)
 <br />Beta Gamma Sigma International Honor Society (Sep. 2012-Present)
 <br />Tippie Scholars Program, Honors Program, &amp; Dean's List (Aug. 2010-Present)
-
-The Consortium Institute of Management &amp; Business Administration, Paderno del Grappa, Italy
+<br />
+<br/>The Consortium Institute of Management &amp; Business Administration, Paderno del Grappa, Italy
 <br />Study Abroad Undergraduate Student (May 2012-Jun. 2012)
 
 <h2 class="subtitle">WORK EXPERIENCE</h2>
