fixed ascii character - this is the final version

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
  only are you rarely at a loss for words; you actually enjoy initiating with strangers because you derive 
  satisfaction from breaking the ice and making a connection. Once that connection is made, you are quite 
  happy to wrap it up and move on. There are new people to meet, new rooms to work, new crowds to mingle 
- in. In your world there are no strangers, only friends you haven’t met yet - lots of them.</i></li>
+ in. In your world there are no strangers, only friends you haven't met yet - lots of them.</i></li>
  <li><b>Analytical</b><br /><i>Your Analytical theme challenges other people: "Prove it. Show me why what
  you are claiming is true." In the face of this kind of questioning some will find that their
  brilliant theories wither and die. For you, this is precisely the point. You do not necessarily
